# hecto-os

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  rust-toolchain  rust-toolchain.toml
arch/riscv/: Cargo.toml
boards/: Makefile.common
boards/k210/: Cargo.toml
boards/qemu-virt-rv64/: Cargo.toml  Makefile
boards/qemu-virt-rv64/src/: entry.asm  main.rs
core_io/: Cargo.toml
core_io/src/: lib.rs
core_io/src/io/: copy.rs  cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs  util.rs
core_io/src/io/buffered/: bufreader.rs  bufwriter.rs  linewriter.rs  linewritershim.rs  mod.rs
fatfs/: .cargo_vcs_info.json  Cargo.toml
fatfs/src/: boot_sector.rs  byteorder_core_io.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  lib.rs
k210-hal/: Cargo.toml
k210-hal/.github/workflows/: cross-compile.yml
k210-pac/: .travis.yml  Cargo.toml
k210-pac/src/: lib.rs
k210-soc/: Cargo.toml
k210-soc/src/: dmac.rs  lib.rs  sysctl.rs
kernel/: Cargo.toml  Makefile  rustfmt.toml
kernel/.cargo/: config.toml
kernel/arch/riscv/: console.rs  cpu.rs  mod.rs  page_table.rs  sbi.rs  switch.asm  switch.rs  task_context.rs  timer.rs  trap.asm  trap.rs  trap_context.rs
kernel/arch/riscv/register/: mod.rs
kernel/arch/riscv/syscall/: mod.rs
kernel/boards/: Makefile.common
kernel/boards/k210/: Makefile  config.rs  entry.asm  linker.ld  main.rs  mod.rs
kernel/boards/qemu-virt-rv64/: Makefile  config.rs  entry.asm  linker.ld  main.rs  mod.rs
kernel/examples/: busybox_tests.rs  lmbench_testcode.rs
kernel/src/: arch.rs  backtrace.rs  board.rs  config.rs  ffi.rs  hart.rs  lib.rs  linker-qemu.ld  logger.rs  main.rs  register.rs  spinlock.rs  timer.rs  trap.rs
kernel/src/algorithm/: Cargo.toml
kernel/src/algorithm/src/allocator/: stacked_allocator.rs
kernel/src/algorithm/src/scheduler/: hrrn_scheduler.rs  mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
kernel/src/fs/: file.rs  flag.rs  mod.rs  pipe.rs  stdio.rs  vnode.rs
kernel/src/interrupt/: context.rs  handler.rs  interrupt.asm  mod.rs  timer.rs
kernel/src/mm/: address.rs  address_space.rs  flag.rs  frame_allocator.rs  heap.rs  memory_set.rs  mod.rs  page_table.rs  physical_page.rs
kernel/src/mm/heap/: mod.rs
kernel/src/mm/heap/slab_allocator/: mod.rs  page.rs  slab.rs
kernel/src/mm/heap/slab_allocator/linked_list/: forward_list.rs  mod.rs
kernel/src/process/: flag.rs  mod.rs  process.rs  processor.rs  schedule.rs  switch.S  thread.rs
kernel/src/sync/: condvar.rs  mod.rs  spinlock.rs
kernel/src/syscall/: fs.rs  misc.rs  mm.rs  mod.rs  process.rs  syscall_id.rs
res/: kflash.py  testsuits.img
