[package]
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Hardware Abstract Layer (HAL) support for K210, dual-core RV64GC SoC"
edition = "2018"
keywords = ["riscv", "k210", "hal"]
license = "ISC"
name = "k210-hal"
repository = "https://github.com/riscv-rust/k210-hal"
version = "0.2.0"

[package.metadata.docs.rs]
targets = ["riscv64imac-unknown-none-elf"]

[dependencies]
bitflags = "1.2.1"
embedded-hal = "1.0.0-alpha.1"
k210-pac = { path = "../k210-pac" }
nb = "0.1.1"
