[package]
edition = "2018"
name = "kernel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithm = { path = '../vendor/algorithm' }
bitflags = { path = '../vendor/bitflags' }
buddy_system_allocator = { path = '../vendor/buddy_system_allocator' }
cstr_core = { path = '../vendor/cstr_core' }
hashbrown = { path = '../vendor/hashbrown' } # 更快的 HashMap
lazy_static = { path = '../vendor/lazy_static', features = ["spin_no_std"] }
linked_list_allocator = { path = "../vendor/linked_list_allocator", features = ["const_mut_refs"] }
riscv = { path = "../vendor/riscv", features = ["inline-asm"] }
spin = { path = '../vendor/spin' } # 自旋锁
virtio-drivers = { path = '../vendor/virtio-drivers' }
xmas-elf = { path = '../vendor/xmas-elf' } # 解析 elf

core_io = { path = "../core_io", features = ["collections"] }
fatfs = { path = "../fatfs" } # fat 32 文件系统
k210-hal = { path = "../k210-hal" }
k210-pac = { path = "../k210-pac" }
k210-soc = { path = "../k210-soc" }

[features]
default = []

# board
k210 = []
qemu-virt-rv64 = []

# log level
debug = []
error = []
info = []
none = []
trace = []
warn = []
