[package]
edition = "2018"
name = "qemu-virt-rv64"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = { path = "../../kernel", default-features = false }
riscv = { path = "../../vendor/riscv", features = ["inline-asm"] }

[features]
# log level
debug = ["kernel/debug"]
error = ["kernel/error"]
info = ["kernel/info"]
trace = ["kernel/trace"]
warn = ["kernel/warn"]
